--- a/pages/basics/if.html
+++ b/pages/basics/if.html
@@ -23,9 +23,9 @@
         <h4>Simple if statement</h4>
         <div class="row">
             <div class="col-6">
-              <p>Type the word 'if' following by parenthesis.</p>
-              <p>Your condition statement goes in the parenthesis.</p>
-              <p>Add a section contained in braces. This is what happens as a result of the if statement.</p>
+                <p>Type the word 'if' following by parenthesis.</p>
+                <p>Your condition statement goes in the parenthesis.</p>
+                <p>Add a section contained in braces. This is what happens as a result of the if statement.</p>
             </div>
             <div class="col-6">
                 <pre class="example"><span class="code-js">let temp = 180
@@ -36,11 +36,12 @@ if (temp <= 32) {
             </div>
         </div>
 
-        <h4>If statement checks if the condition is true</h4>
+        <h4>if or else statements check if the condition is true</h4>
         <div class="row">
             <div class="col-6">
-              <p>The if statment checks if the statement is true.</p>
-              <p>This prints 'Welcome' since the condition is not true.</p>
+                <p>If the condition is true, the result code is run.</p>
+                <p>If the condition is false, the code is not run.</p>
+                <p>This prints 'Welcome' since the condition is not true.</p>
             </div>
             <div class="col-6">
                 <pre class="example"><span class="code-js">let isAccountLocked = false
@@ -56,9 +57,9 @@ if (isAccountLocked) {
         <h2>else if statement</h2>
         <div class="row">
             <div class="col-6">
-              <p>If the 'if statement' is not true, you can add additional 'else if' and and final 'else' section to take care of those cases.</p>
-              <p>The additional else if statements can be used to look for additional conditions to check.</p>
-              <p>This prints 'Wecome' because the first if statement is NOT true, and the 'else if' statement is NOT true.</p>
+                <p>If the 'if statement' is not true, you can add additional 'else if' and and final 'else' section to take care of those cases.</p>
+                <p>The additional else if statements can be used to look for additional conditions to check.</p>
+                <p>This prints 'Wecome' because the first if statement is NOT true, and the 'else if' statement is NOT true.</p>
 
             </div>
             <div class="col-6">
@@ -78,7 +79,7 @@ if (isAccountLocked) {
         <h4>boolean else if</h4>
         <div class="row">
             <div class="col-6">
-              <p>This prints 'It is freezing outside' since the first if condition is TRUE.</p>
+                <p>This prints 'It is freezing outside' since the first if condition is TRUE.</p>
 
             </div>
             <div class="col-6">
