lots of reorganization

--- a/pages/basics/scope.html
+++ b/pages/basics/scope.html
@@ -106,6 +106,30 @@ if (true) {
 
 
 
+    <section class="container">
+        <h1>Variable Scope</h1>
+        <div class="row">
+            <div class="col">
+                <p>Scope determines where in your code your variable is available.</p>
+                <p>The location of the variable and how it is declared determines the scope.</p>
+                <p>There are 3 types of scope in JavaScript.</p>
+                <ul>
+                    <li>Global - This is when you declare the variable outside of any function. You can then access it in any script. However, if you update the variable within any function, the global value changes. So, any other references to that variable
+                        are updated as well.</li>
+                    <li>Local - This is when you declare the variable inside a function. It's only then available within that function.</li>
+                    <li>Block - new scope added with ES2015 used with 'const' and 'let' variables. The scope is limited to a small block of code, even within a function.</li>
+                </ul>
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
 
 
     <section class="container">
