--- a/index.html
+++ b/index.html
@@ -40,15 +40,7 @@
             </ul>
         </nav>
 
-        <p class="toc-heading2">Test page</p>
-        <nav>
-            <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="examples/test-page.html">Test Page</a>
-                </ul>
-            </ul>
-        </nav>
 
 
 
@@ -60,23 +52,121 @@
 
 
         <p class="toc-heading1">Basics</p>
+
+
+        <p class="toc-heading2">General setup</p>
         <nav>
             <ul class="main-nav">
 
                 <ul class="sub-nav">
                     <li><a href="pages/basics/console.html">The browser console</a></li>
-                    <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
-                    <li><a href="pages/basics/operators.html">Operators</a></li>
-                    <li><a href="pages/basics/scope.html">Scope</a></li>
-                    <li><a href="pages/basics/this.html">this</a></li>
-                    <li><a href="pages/basics/typeof.html">typeof</a></li>
-                    <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+
+
+        <p class="toc-heading2">Variables</p>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+
+                    <li><a href="pages/basics/variables.html">Variables</a> var, let, const</li>
                     <li><a href="pages/basics/boolean.html">Boolean</a></li>
+                    <li><a href="pages/basics/scope.html">Scope</a></li>
+                    <li><a href="pages/basics/typeof.html">typeof</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+
+
+
+
+        <p class="toc-heading2">MISC</p>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+
+
+
+
+                    <li><a href="pages/basics/this.html">this</a></li>
+
+
                     <li><a href="pages/basics/if.html">if statements</a></li>
                 </ul>
             </ul>
         </nav>
+
+
+
+        <p class="toc-heading2">Operators</p>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+
+
+
+                    <li><a href="pages/basics/operators-comparison.html">Comparison Operators</a></li>
+
+
+                    <li><a href="pages/basics/operators-boolean.html">Boolean Operators</a></li>
+                    <li><a href="pages/basics/operators-arithmatic.html">Arithmatic Operators</a></li>
+
+                </ul>
+            </ul>
+        </nav>
+
+
+
+
+
+
+        <p class="toc-heading1">Strings</p>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/basics/strings.html">Strings basics</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+        <p class="toc-heading2">String methods</p>
+
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/basics/string-methods.html">String Methods</a></li>
+
+                    <li><a href="pages/basics/string-methods-length.html">length</a> - length()</li>
+                    <li><a href="pages/basics/string-methods-search.html">search</a> - indexOf(), search(), </li>
+                    <li><a href="pages/basics/string-methods-extract.html">extract</a> - substring(), substr(), slice(), </li>
+                    <li><a href="pages/basics/string-methods-replace.html">replace</a> - replace()</li>
+                    <li><a href="pages/basics/string-methods-altering.html">altering</a> - charAt(), toUpperCase(), toLowerCase(), concat(), trim(), includes()</li>
+                    <li><a href="pages/basics/string-methods-convert-to-array.html">convert to array</a> - split()</li>
+                    <li><a href="pages/basics/string-methods-property-access.html">Property access</a></li>
+
+                </ul>
+            </ul>
+        </nav>
+
+
+
+
+
+
+
+
+
+
+        <p class="toc-heading1">Numbers</p>
 
         <p class="toc-heading2">Dates</p>
         <nav>
@@ -104,28 +194,10 @@
         </nav>
 
 
-        <p class="toc-heading2">Script examples</p>
-        <nav>
-            <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
-                    <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
-                </ul>
-            </ul>
-        </nav>
 
-        <p class="toc-heading2">Strings</p>
-        <nav>
-            <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/basics/strings.html">Strings</a></li>
-                    <li><a href="pages/basics/string-methods.html">String Methods</a></li>
 
-                </ul>
-            </ul>
-        </nav>
 
 
 
@@ -135,6 +207,7 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
+                    <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
                     <li><a href="pages/dom/accessing-the-dom.html">Accessing the DOM content</a></li>
                     <li><a href="pages/dom/read-only-properties.html">Interacting with READ-ONLY properties</a></li>
                     <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
@@ -156,7 +229,84 @@
         </nav>
 
 
-        <p class="toc-heading1">Arrays, Functions, and Objects</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <p class="toc-heading1">Functions, Objects, and Arrays</p>
+
+
+
+
+        <p class="toc-heading2">Functions</p>
+        <nav>
+            <ul class="main-nav">
+
+                <h5>Basics</h5>
+                <ul class="sub-nav">
+
+                    <li><a href="pages/functions/basic-functions.html">Basic Functions</a> - Parameters, Declaring, return, execution order</li>
+                    <li><a href="pages/functions/function-types.html">Types of functions</a> - Named, Anonymous, Immediately Invoked</li>
+                    <ul>
+                        <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
+                    </ul>
+                    <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
+
+                </ul>
+
+                <h5>Topics</h5>
+                <ul>
+                    <li><a href="pages/functions/closures.html">Closures</a></li>
+                    <li><a href="pages/functions/hoisting.html">Hoisting</a></li>
+                    <li><a href="pages/functions/modules.html">Modules</a></li>
+                    <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+
+
+
+
+
+
+        <p class="toc-heading2">Objects</p>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/objects/objects.html">Objects</a></li>
+                    <li><a href="pages/objects/objects-creating.html">Creating Objects</a></li>
+                    <li><a href="pages/objects/objects-retrieving.html">Retrieving data from Objects</a></li>
+                    <li><a href="pages/objects/objects-altering.html">Altering Objects</a></li>
+                    <li><a href="pages/objects/objects-deleting.html">Deleting an Object or property</a></li>
+                    <li><a href="pages/objects/object-iteration.html">Object iteration</a></li>
+
+
+
+
+                    <li><a href="pages/objects/methods.html">Methods</a> - Chaining </li>
+                    <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
+                    <li><a href="pages/objects/object-constructors.html">Object Constructors</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+
+
+
+
+
         <p class="toc-heading2">Arrays</p>
         <nav>
             <ul class="main-nav">
@@ -189,41 +339,13 @@
 
 
 
-        <p class="toc-heading2">Functions</p>
-        <nav>
-            <ul class="main-nav">
-
-                <ul class="sub-nav">
-                    <li>
-                        <h5>Basics</h5>
-                    </li>
-                    <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
-                    <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
-                    <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
-                    <li>
-                        <h5>Topics</h5>
-                    </li>
-                    <li><a href="pages/functions/closures.html">Closures</a></li>
-                    <li><a href="pages/functions/hoisting.html">Hoisting</a></li>
-                    <li><a href="pages/functions/modules.html">Modules</a></li>
-                    <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
-                </ul>
-            </ul>
-        </nav>
 
 
-        <p class="toc-heading2">Objects</p>
-        <nav>
-            <ul class="main-nav">
 
-                <ul class="sub-nav">
-                    <li><a href="pages/objects/objects.html">Objects</a></li>
-                    <li><a href="pages/objects/methods.html">Methods</a></li>
-                    <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
-                    <li><a href="pages/objects/object-constructors.html">Object Constructors</a></li>
-                </ul>
-            </ul>
-        </nav>
+
+
+
+
 
 
 
@@ -261,7 +383,22 @@
 
 
         <p class="toc-heading1">Examples (small)</p>
+
+
+        <p class="toc-heading2">Script examples (split these apart into different sections)</p>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
+                    <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
+                </ul>
+            </ul>
+        </nav>
+
         <h3>DOM Rendering</h3>
+
+
 
         <ul>
             </li>
@@ -280,6 +417,27 @@
             <li><a href="examples/events/dropdown.html">Check dropdown option</a></li>
 
         </ul>
+        <p class="toc-heading2">Test page</p>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="examples/test-page.html">Test Page</a>
+                </ul>
+            </ul>
+        </nav>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -287,6 +445,7 @@
         <p class="toc-heading1">Examples (projects)</p>
         <h3>Expense Tracker</h3>
         <ul>
+            <li><a href="projects/expense-tracker/expense-tracker-01.html">Expense tracker (v1)</a></li>
             <li><a href="projects/expense-tracker/expense-tracker.html">JS only expense tracker</a></li>
         </ul>
 
