--- a/pages/functions/invoking-functions.html
+++ b/pages/functions/invoking-functions.html
@@ -34,6 +34,47 @@
     </section>
 
 
+    <section class="container">
+        <h1>Where to call (invoke) the function?</h1>
+        <div class="row">
+            <div class="col">
+                <p>It doesn't matter. The browser loads all JS, then runs it.</p>
+                <p>But for readability, it's easier to put the function before it's called in the script.</p>
+            </div>
+        </div>
+
+
+
+
+
+        <h3>Accessing the function without ()</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>To access a function you would use (). For example, if the function is named testFunction, you would call it using: testFunction().</p>
+                <p>However, if you leave off the (), the function definition instead is returned.</p>
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">function test() {
+var y = 2;
+var z = 2;
+var x = y + z;
+return x;
+}
+
+console.log(test());
+console.log(test);</span></pre>
+            </div>
+            <img src="../../_img/call-function-without-parenthesis.png">
+        </div>
+
+
+    </section>
+
+
+
+
+
 
     <section class="container">
         <h2>Invoking as a function</h2>
@@ -283,7 +324,7 @@ speak.call(saySomething);</span></pre>
                 <p>The 2nd param is sent to the function as a value to pass.</p>
             </div>
             <div class="col-6">
-<pre class="example"><span class="code-js">var speak = function(what) {
+                <pre class="example"><span class="code-js">var speak = function(what) {
   console.log(what);
 }
 
@@ -308,21 +349,21 @@ speak.call(saySomething, saySomething.normal);</span></pre>
 
 
 
-<section class="container">
-    <h3>The apply() method</h3>
-    <div class="row">
-        <div class="col">
-            <p>The apply() method is similar to call(), but it passes an array (instead of object or element).</p>
+    <section class="container">
+        <h3>The apply() method</h3>
+        <div class="row">
+            <div class="col">
+                <p>The apply() method is similar to call(), but it passes an array (instead of object or element).</p>
+            </div>
         </div>
-    </div>
 
-    <h4>Example</h4>
-    <div class="row">
-        <div class="col-6">
-            <p>This returns: 'hiss'.</p>
-        </div>
-        <div class="col-6">
-<pre class="example"><span class="code-js">var speak = function(what) {
+        <h4>Example</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>This returns: 'hiss'.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var speak = function(what) {
   console.log(what);
 }
 
@@ -332,22 +373,22 @@ var saySomething = {
 }
 
 speak.apply(saySomething, ['hiss']);</span></pre>
+            </div>
         </div>
-    </div>
 
 
 
-    <h3>The Difference Between call() and apply()</h3>
-    <div class="row">
-        <div class="col">
-            <p>call() takes any function arguments separately.call() passes a value.</p>
-            <p>apply() takes any function arguments as an array. apply() passes an array.</p>
-            <p>The apply() method is very handy if you want to use an array instead of an argument list.</p>
+        <h3>The Difference Between call() and apply()</h3>
+        <div class="row">
+            <div class="col">
+                <p>call() takes any function arguments separately.call() passes a value.</p>
+                <p>apply() takes any function arguments as an array. apply() passes an array.</p>
+                <p>The apply() method is very handy if you want to use an array instead of an argument list.</p>
+            </div>
         </div>
-    </div>
 
 
-  </section>
+    </section>
 
 
 
