--- a/pages/basics/string-methods-altering.html
+++ b/pages/basics/string-methods-altering.html
@@ -123,6 +123,7 @@ var text = "Hello".concat(" ", "World!"); </pre>
                 <div class="row">
                     <div class="col-6">
                         <p>String.trim() removes whitespace from both sides of a string.</p>
+                        <p>Necessary in FORMS to remove accidental white space.</p>
                     </div>
                     <div class="col-6">
                         <pre class="example"><span class="code-js">var str = "    Hello World!    ";
