--- a/pages/basics/variables.html
+++ b/pages/basics/variables.html
@@ -34,7 +34,7 @@
         </div>
 
 
-        <h2>Declaring variables</h2>
+        <h1>Declaring variables</h1>
 
         <div class="row">
             <div class="col-6">
@@ -74,16 +74,50 @@ price = 200;</pre>
             </div>
         </div>
 
-
-        <h2>var is no longer used</h2>
+        <h1>var</h1>
+        <h3>var is no longer used</h3>
         <div class="row">
             <div class="col">
                 <p>var was used in the past, but no longer used due to its quirks. It still works, but modern devs do not use it any longer.</p>
                 <p>One reason is that you can re-declare a variable with the same name to a different value. let and const do not allow this.</p>
-                <p>var is function scoped, not block scoped. If var is used in a function, you cannot access it outside of that function. If var is used in an if block statement, you can still access it outside. If let us used in the if statement, it's not
-                    accessible outside of it.</p>
-                <p>When a var is created, its declaration is hoisted to the top of the scope. So you can call that variables before it's declared and it will display as undefined. This would throw an error with let.</p>
             </div>
+        </div>
+
+        <h4>var scope</h4>
+        <div class="row">
+
+            <div class="col-6">
+                <p>var is function scoped, not block scoped. If var is used in a function, you cannot access it outside of that function.</p>
+                <p>When you run this, you'll get the error <strong>ReferenceError: firstName is not defined</strong>.</p>
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-js">const setName = function () {
+var firstName = 'Jen'
+}
+
+setName()
+console.log(firstName)</span></pre></div>
+        </div>
+
+
+        <h4>Calling before assigned</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>If var is used in an if block statement, you can still access it outside. If let us used in the if statement, it's not accessible outside of it.</p>
+                <p>When a var is created, its declaration (not its value) is hoisted to the top of the scope. So you can call that variables before it's declared and it will display as undefined. This would throw an error with let.</p>
+            </div>
+
+
+            <div class="col-6">
+                <pre class="example"><span class="code-comment">This prints Undefined since a var can be called before it's assigned</span>
+<span class="code-js">console.log(age)
+ var age</span>
+
+<span class="code-comment">This errors with 'age is not defined' since a let cannot be called before it's assigned</span>
+<span class="code-js">console.log(age)
+let age</span></pre></div>
+
         </div>
 
 
@@ -94,8 +128,36 @@ price = 200;</pre>
 
 
 
-
+        <h1>let and const</h1>
         <h2>2 new types in ES2015</h2>
+
+        <h3>let</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>Block scope variable. Smaller scope than var.</p>
+                <p>Notice how 'var localVar' is commented out twice.</p>
+                <p>If both were not commented, the nested if statement would changed the variable 'localVar' to "I'm different" inside the if statement and outside of it.</p>
+                <p>When 'let' is used, it only changes inside the variable inside of the if statement. This is because the if statement is the variable's 'Block Scope'.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">function logScope() {
+  <span class="code-comment">//var localVar =2;</span>
+  let localVar = 2;
+
+  if (localVar) {  <span class="code-comment">//This is TRUE</span>
+    <span class="code-comment">// var localVar = "I'm different";
+    //this if statement is the block scope of the variable</span>
+    let localVar = "I'm different";
+    console.log("nested localVar: ", localVar);
+  }
+
+  console.log("logScope localVar: ", localVar);
+}
+
+logScope();</span></pre>
+            </div>
+        </div>
+
         <h3>const</h3>
         <div class="row">
             <div class="col-6">
@@ -128,32 +190,7 @@ console.log(person)</span></pre>
         </div>
 
 
-        <h3>let</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>Block scope variable. Smaller scope than var.</p>
-                <p>Notice how 'var localVar' is commented out twice.</p>
-                <p>If both were not commented, the nested if statement would changed the variable 'localVar' to "I'm different" inside the if statement and outside of it.</p>
-                <p>When 'let' is used, it only changes inside the variable inside of the if statement. This is because the if statement is the variable's 'Block Scope'.</p>
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">function logScope() {
-  <span class="code-comment">//var localVar =2;</span>
-  let localVar = 2;
 
-  if (localVar) {  <span class="code-comment">//This is TRUE</span>
-    <span class="code-comment">// var localVar = "I'm different";
-    //this if statement is the block scope of the variable</span>
-    let localVar = "I'm different";
-    console.log("nested localVar: ", localVar);
-  }
-
-  console.log("logScope localVar: ", localVar);
-}
-
-logScope();</span></pre>
-            </div>
-        </div>
     </section>
 
 
