--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 
 
-        <p class="toc-heading1">Functions, Objects, and Arrays</p>
+        <p class="toc-heading1">Functions</p>
 
 
 
@@ -279,7 +279,7 @@
 
 
 
-
+        <p class="toc-heading1">Objects</p>
         <p class="toc-heading2">Objects</p>
         <nav>
             <ul class="main-nav">
@@ -307,32 +307,47 @@
 
 
 
+        <p class="toc-heading1">Arrays</p>
+
         <p class="toc-heading2">Arrays</p>
         <nav>
             <ul class="main-nav">
 
+                <h5>Basics</h5>
                 <ul class="sub-nav">
-                    <li>
-                        <h5>Basics</h5>
-                    </li>
-                    <li><a href="pages/arrays/arrays.html">Arrays</a> - ARRAY.lenth, forEach(), isArray()</li>
-                    <li><a href="pages/arrays/array-iteration.html">Array Iteration</a> - forEach(), map(), filter(), reduce(), every(), some(), indexOf(), lastIndexOf(), find(), findIndex()
-                    </li>
-                    <li>
-                        <h5>Methods</h5>
-                    </li>
-                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a> - splice(), pop(), shift(), push(), length, unshift(), slice(),
 
-                    </li>
+                    <li><a href="pages/arrays/arrays.html">Arrays</a> - Overview and length property</li>
+                </ul>
+
+                <h5>Array Iteration</h5>
+                <ul class="sub-nav">
+                    <li><a href="pages/arrays/array-for-loop.html">Array for loop</a></li>
+                    <li><a href="pages/arrays/array-foreach.html">forEach()</a> - calls a function (a callback function) once for each array element</li>
+                    <li><a href="pages/arrays/array-indexOf.html">indexOf()</a> - returns index of an element </li>
+                    <li><a href="pages/arrays/array-map.html">map()</a> - creates a new array by performing a function on each array element</li>
+                    <li><a href="pages/arrays/array-filter.html">filter()</a> - creates a new array, but only with elements that pass a specific test in the function</li>
+                    <li><a href="pages/arrays/array-every.html">every()</a> - check if all array values pass a test</li>
+                    <li><a href="pages/arrays/array-some.html">some()</a> - check if any array values pass a test</li>
+                    <li><a href="pages/arrays/array-lastindexof.html">lastIndexOf()</a> - does the same as indexOf(), but searches from the end.</li>
+                    <li><a href="pages/arrays/array-find.html">find()</a> - returns the value of the first array element that passes a test function</li>
+                    <li><a href="pages/arrays/array-findindex.html">findIndex()</a> - returns the index of the first array element that passes a test function</li>
+                </ul>
+
+
+                <h5>Methods</h5>
+                <ul class="sub-nav">
+                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a> - splice(), pop(), shift(), push(), length, unshift(), slice()</li>
                     <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a> - indexOf(), findIndexOf(), find()</li>
                     <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a> - join(), toString(), split()</li>
-                    <li><a href="pages/arrays/arrays-of-objects.html">Arrays of Objects</a></li>
                     <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a> - sort(), Math.max(), Math.min()</li>
-                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a>
-                        <ul>
-                            <li>reverse()</li>
-                        </ul>
-                    </li>
+                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a> - reverse()</li>
+                </ul>
+
+                <h5>Types of Arrays</h5>
+                <ul class="sub-nav">
+                    <li><a href="pages/arrays/arrays-of-objects.html">Array of Objects</a> - findIndex() to search</li>
+                    <li><a href="pages/arrays/arrays-associative.html">Associative Arrays</a></li>
+
                 </ul>
             </ul>
         </nav>
@@ -446,11 +461,13 @@
         <h3>Expense Tracker</h3>
         <ul>
             <li><a href="projects/expense-tracker/expense-tracker-01.html">Expense tracker (v1)</a></li>
-            <li><a href="projects/expense-tracker/expense-tracker.html">JS only expense tracker</a></li>
+            <li><a href="projects/expense-tracker/expense-tracker-02.html">Expense tracker (v2)</a></li>
         </ul>
 
-
-
+        <h3>Todo list</h3>
+        <ul>
+            <li><a href="projects/todolist/todolist-01.html">Todo List (v1)</a></li>
+        </ul>
 
 
         <h3>Note taking and Filter app</h3>
