--- a/pages/arrays/arrays-of-objects.html
+++ b/pages/arrays/arrays-of-objects.html
@@ -16,21 +16,21 @@
 <body>
     <a href="../../index.html">Home page</a>
 
-      <section class="container">
-          <h1>Create an array of 'Course' Objects</h1>
+    <section class="container">
+        <h1>Create an array of 'Course' Objects</h1>
 
-          <div class="row">
-              <div class="col-6">
+        <div class="row">
+            <div class="col-6">
                 <p>This creates an Array of Objects named 'Course'.</p>
                 <p>You must first create the Object constructor. Only then can objects be created in the Array.</p>
                 <p>This outputs:<br>0: Object { title: "JavaScript Essential Training", instructor: "Teacher Name", level: 1, … }
-<br><br>1: Object { title: "New course name", instructor: "other teacher Name", level: 3, … }
-<br>​<br>length: 2
-<br><br>other teacher namespacing
-<br><br>1235</p>
-              </div>
-              <div class="col-6">
-<pre class="example"><span class="code-js"><span class="code-comment">//Create the Object constructor first</span>
+                    <br><br>1: Object { title: "New course name", instructor: "other teacher Name", level: 3, … }
+                    <br>​<br>length: 2
+                    <br><br>other teacher namespacing
+                    <br><br>1235</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js"><span class="code-comment">//Create the Object constructor first</span>
 function Course(title,instructor,level,views) {
     this.title = title;
     this.instructor = instructor;
@@ -51,12 +51,55 @@ console.log(courses);
 console.log(courses[1].instructor);
 <span class="code-comment">//You can run the function in the Object constructor to update the Course view #</span>
 console.log(courses[1].updateViews());</span></pre>
-              </div>
-          </div>
+            </div>
+        </div>
 
 
-    <script src="../../_js/jquery.js"></script>
-    <script src="../../_js/bootstrap.bundle.js"></script>
+
+
+
+
+
+        <div class="row">
+
+            <div class="col">
+                <h2>Searching an Array of Objets with findIndex()</h2>
+                <ul>
+                    <li><a href="array-findIndex.html">findIndex()</a></li>
+                </ul>
+            </div>
+        </div>
+
+
+
+        <div class="row">
+
+            <div class="col">
+                <h2>Searching an Array of Objets with find()</h2>
+                <ul>
+                    <li><a href="array-find.html">find()</a></li>
+                </ul>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
