--- a/pages/arrays/arrays.html
+++ b/pages/arrays/arrays.html
@@ -46,9 +46,9 @@
             </div>
             <div class="col-6">
                 <pre class="example">Using the 'new' keyword
-<span class="code-js">var cars = new Array("Saab", "Volvo", "BMW");</span>
+<span class="code-js">const cars = new Array("Saab", "Volvo", "BMW");</span>
 Not using the 'new' keyword
-<span class="code-js">var myarray = ["keys", "stuff", "things"]</span></pre>
+<span class="code-js">const myarray = ["keys", "stuff", "things"]</span></pre>
             </div>
         </div>
 
@@ -66,7 +66,7 @@ Not using the 'new' keyword
                 <p>This returns 4</p>
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var fruits = ["Banana", "Orange", "Apple", "Mango"];
+                <pre class="example"><span class="code-js">const fruits = ["Banana", "Orange", "Apple", "Mango"];
 alert(fruits.length);</span></pre>
             </div>
         </div>
@@ -92,7 +92,7 @@ alert(fruits.length);</span></pre>
                 </ul>
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var pens = ["red", "blue", "green", "orange"];
+                <pre class="example"><span class="code-js">const pens = ["red", "blue", "green", "orange"];
 console.log(pens);</span></pre>
             </div>
         </div>
@@ -105,7 +105,7 @@ console.log(pens);</span></pre>
                 <p>This outputs: Saab</p>
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var cars = ["Saab", "Volvo", "BMW"];
+                <pre class="example"><span class="code-js">const cars = ["Saab", "Volvo", "BMW"];
 console.log(cars[0]);</span></pre>
             </div>
         </div>
@@ -119,7 +119,7 @@ console.log(cars[0]);</span></pre>
             </div>
             <div class="col-6">
                 <pre class="example"><span class="code-js">fruits = ["Banana", "Orange", "Apple", "Mango"];
-var last = fruits[fruits.length - 1];
+const last = fruits[fruits.length - 1];
 console.log(last);</span></pre>
             </div>
         </div>
@@ -127,80 +127,6 @@ console.log(last);</span></pre>
     </section>
 
 
-
-    <section class="container">
-        <h1>Looping through Array elements</h1>
-        <h3>Using a for loop to print Array elements</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>You can also use a 'for' loop to print out each index value.</p>
-                <p>This returns:</p>
-                <ul>
-                    <li>Pineapple</li>
-                    <li>Lemon</li>
-                    <li>Apple</li>
-                    <li>Orange</li>
-                    <li>Peach</li>
-                </ul>
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var fruits = ["Pineapple", "Lemon", "Apple", "Orange", "Peach"]
-
-  for(var i=0; i &lt; fruits.length; i++) {
-  console.log(fruits[i])
-}</span></pre>
-            </div>
-        </div>
-
-        <h3>Using a forEach() function</h3>
-        <div class="row">
-            <div class="col-6">
-                <p>You can also use a 'for' loop to print out each index value.</p>
-                <p>This returns the elments in an HTML unordered list. For example.</p>
-                <p>&lt;ul&gt;&lt;li&gt;Banana&lt;/li&gt;&lt;li&gt;Orange&lt;/li&gt;&lt;li&gt;Apple&lt;/li&gt;&lt;li&gt;Mango&lt;/li&gt;&lt;/ul&gt;</p>
-
-
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var fruits, text;
-fruits = ["Banana", "Orange", "Apple", "Mango"];
-
-text = "<ul>";
-fruits.forEach(myFunction);
-text += "</ul>";
-
-function myFunction(value) {
-    text += "<li>" + value + "</li>";
-}
-
-console.log(text);</span></pre>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-6">
-
-                <p>For this reason, it makes sense to use getElementById to add this information to a page.</p>
-                <p>For example, this prints the unordered list to the HTML page.</p>
-
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-html">&lt;p id="demo"&gt;</span>
-
-<span class="code-js">var fruits, text;
-fruits = ["Banana", "Orange", "Apple", "Mango"];
-
-text = "&lt;ul&gt;";
-fruits.forEach(myFunction);
-text += "&lt;/ul&gt;";
-document.getElementById("demo").innerHTML = text;
-
-function myFunction(value) {
-    text += "&lt;li&gt;" + value + "&lt;/li&gt;";
-} </span></pre>
-            </div>
-        </div>
-    </section>
 
 
 
@@ -215,7 +141,7 @@ function myFunction(value) {
                 <p>This outputs: Opel,Volvo,BMW</p>
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var cars = ["Saab",
+                <pre class="example"><span class="code-js">const cars = ["Saab",
             "Volvo",
             "BMW"];
 cars[0] = "Opel";</span></pre>
@@ -237,15 +163,6 @@ cars[0] = "Opel";</span></pre>
 
 
 
-    <section class="container">
-        <h1>Associative Arrays</h1>
-        <div class="row">
-            <div class="col">
-                <p>Many programming languages support arrays with named indexes which are known as Associative arrays (or hashes).</p>
-                <p>JavaScript does not support arrays with named indexes. In JavaScript, arrays always use numbered indexes.</p>
-            </div>
-        </div>
-    </section>
 
     <section class="container">
         <h1>Difference Between Arrays and Objects</h1>
@@ -268,7 +185,7 @@ cars[0] = "Opel";</span></pre>
                 <p>ECMAScript 5 defines a new method Array.isArray(). This returns 'true' if it's an Array.</p>
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var cars = ["Saab","Volvo","BMW"];
+                <pre class="example"><span class="code-js">const cars = ["Saab","Volvo","BMW"];
 console.log(Array.isArray(cars));</span></pre>
             </div>
         </div>
@@ -277,10 +194,10 @@ console.log(Array.isArray(cars));</span></pre>
         <div class="row">
             <div class="col-6">
                 <p>The function always returns true if the argument is an array.</p>
-<p>Or more precisely: it returns true if the object prototype contains the word "Array"</p>
+                <p>Or more precisely: it returns true if the object prototype contains the word "Array"</p>
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var cars = ["Saab","Volvo","BMW"];
+                <pre class="example"><span class="code-js">const cars = ["Saab","Volvo","BMW"];
 
 function isArray(myArray) {
     return myArray.constructor.toString().indexOf("Array") > -1;
@@ -297,7 +214,7 @@ console.log(isArray(cars));</span></pre>
                 <p>The instanceof operator returns true if an object is created by a given constructor.</p>
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var cars = ["Saab","Volvo","BMW"];
+                <pre class="example"><span class="code-js">const cars = ["Saab","Volvo","BMW"];
 
 console.log(cars instanceof Array);</span></pre>
             </div>
@@ -312,9 +229,6 @@ console.log(cars instanceof Array);</span></pre>
 
 
 
-
-    <script src="../../_js/jquery.js"></script>
-    <script src="../../_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
