--- a/pages/arrays/editing-array-content.html
+++ b/pages/arrays/editing-array-content.html
@@ -75,8 +75,13 @@ console.log(fruits);</span></pre>
         <h2>The pop() method</h2>
         <h3>Removing the last item</h3>
         <div class="row">
-            <div class="col">
+            <div class="col-6">
                 <p>The pop() method removes the last element from an array.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var fruits = ["Banana", "Orange", "Apple", "Mango"];
+<span class="code-comment">// just run the method to remove the last item</span>
+fruits.pop();</span></pre>
             </div>
         </div>
 
@@ -169,6 +174,8 @@ console.log(fruits);</span></pre>
             </div>
         </div>
 
+
+
         <h2>Adding by specifying the index value</h2>
         <div class="row">
             <div class="col-6">
@@ -193,6 +200,19 @@ console.log(fruits);</span></pre>
 fruits[9] = "Lemon";
 console.log(fruits);</span></pre>
             </div>
+        </div>
+
+
+
+        <div class="row">
+            <div class="col-6">
+                <p>This overwrites index 2 with the new value.</p>
+            </div>
+
+
+            <div class="col-6">
+                <pre class="example"><span class="code-js">const notes = ['Note 1', 'Note 2', 'Note 3']
+notes[2] = 'This is now the new note 3'</span></pre></div>
         </div>
     </section>
 
@@ -296,13 +316,13 @@ console.log(myChildren);</span></pre>
             </div>
 
             <div class="col-6">
-<pre class="example"><span class="code-js">var fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
+                <pre class="example"><span class="code-js">var fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
 var citrus = fruits.slice(1);
 console.log(citrus);</span></pre>
             </div>
         </div>
 
-<h3>Slicing from a single index value toa specific index value</h3>
+        <h3>Slicing from a single index value toa specific index value</h3>
         <div class="row">
             <div class="col-6">
                 <p>The slice() method can take two arguments. For example: slice(1,3).</p>
@@ -312,7 +332,7 @@ console.log(citrus);</span></pre>
             </div>
 
             <div class="col-6">
-<pre class="example"><span class="code-js">var fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
+                <pre class="example"><span class="code-js">var fruits = ["Banana", "Orange", "Lemon", "Apple", "Mango"];
 var citrus = fruits.slice(1,3);
 console.log(citrus);</span></pre>
             </div>
