--- a/index.html
+++ b/index.html
@@ -412,13 +412,10 @@
         </nav>
 
         <h3>DOM Rendering</h3>
-
-
-
         <ul>
-            </li>
-            <li><a href="examples/domrendering/domrendering.html">DOM Rendering</a></li>
+            <li><a href="examples/dom/adding-element-to-page.html">Adding an element to the page</a></li>
         </ul>
+
 
         <h3>Events</h3>
 
@@ -429,12 +426,17 @@
         </ul>
 
 
+        <h4>Input fields</h4>
+        <ul>
+            <li><a href="examples/events/input/change-event.html">Fire the 'change' event on an input field</a></li>
+            <li><a href="examples/events/input/input-event.html">Fire the 'input' event on an input field</a></li>
+        </ul>
+
         <h4>Forms</h4>
         <ul>
             <li><a href="examples/events/clear-form-field-when-submit-is-clicked.html">Clear form field when submit is clicked</a></li>
-            </li>
-
         </ul>
+
         <h4>Misc</h4>
         <ul>
 
@@ -497,6 +499,13 @@
             <li><a href="projects/live-filter-text/live-filter-text.html">Note taking app</a></li>
         </ul>
 
+
+        <h4>DOM Rendering</h4>
+
+        <ul>
+            </li>
+            <li><a href="examples/domrendering/domrendering.html">DOM Rendering</a></li>
+        </ul>
 
 
         <script src="_js/jquery.js"></script>
